selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.4.out
Error at %FILE_NAME%:1:47
Type mismatch
  |  val m: Map<Int, String> = { (123): Option.Some("hello"), (456): Option.None_ }
                                                   ^
Expected: String
but instead found: String?
