selfhost/test/typechecker/map/error_type_mismatch_bindingdecl.4.abra
val m: Map<Int, String> = { (123): Option.Some("hello"), (456): Option.None_ }